# victors-birthday

./: .dockerignore  .gitignore  Dockerfile  README.md  build_image.sh  build_iso.sh  build_script_in_docker.sh  generate_shadow.py  group  grub.cfg  motd  nix.conf  packages.x86_64  packages.x86_64.uncached  pacman.conf  passwd  profiledef.sh  profiledef.sh.desired  rebuild_docker_image_no_cache.sh  shadow  submit.py  submit.sh  test_iso.sh
01_math/: install.sh  problem1  problem2  problem3
02_klok/: README.md  install.sh
03_doctor_who/: README.md  install.sh
04_rusttracer/: install.sh
04_sudocats/: README.md  install.sh
05_vegemite/: EATME.md  install.sh
06_session/: install.sh
07_campus_router/: README.md  install.sh
08_aerdenhout/: README.md  install.sh
08_session/: README.md  install.sh
09_university_challenge/: READMEATOXFORD.md  install.sh
09_vegemite/: install.sh
10_bmw_router/: README.md  install.sh
10_cats/: MEOWME.md
10_monty_python/: README.md  install.sh
11_scrabble/: README.md  install.sh
12_tapeworm/: README.md  install.sh
13_spelling_mistakes/: README.md  install.sh
14_cats/: install.sh
14_rusttracer/: install.sh
14_rusttracer/project/: Cargo.toml
14_rusttracer/project/src/config/: run.rs
14_rusttracer/project/src/datastructure/: intersection.rs
14_rusttracer/project/src/datastructure/bvh/: mod.rs
14_rusttracer/project/src/generator/: mod.rs
14_rusttracer/project/src/scene/texture/: mod.rs
15_cats/: install.sh
15_rusttracer/: README.md  install.sh
16_minecraft/: README.md  install.sh  start.sh
(+138 files in other folders)
