[package]
name = "rusttracer"
version = "0.1.0"
authors = ["jonay2000 <jonabent@gmail.com>"]
edition = "2021"

[dependencies]
bmp = "0.5"
tobj = "0.1.12"
once_cell = "1.15"
image = "0.24"
log = "0.4"
simple-logging = "2.0"
rand = "0.7"
serde_yaml = "0.8"
serde = {version = "1", features = ["derive"]}
thiserror = "1"